--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pidanmoe/mcp-stock",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "module": "dist/index.js",
   "preferGlobal": true,
   "bin": {
@@ -24,7 +24,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "fastmcp": "^3.8.2",
+    "fastmcp": "3.23.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
